--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "extract-zip": "^2.0.1",
+    "mocha": "^9.1.3",
     "request": "^2.88.2",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha spec"
   },
   "author": "Carlos M",
   "license": "ISC"
