--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha spec"
+    "test": "bin/mocha spec"
   },
   "author": "Carlos M",
   "license": "ISC"
