--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "bungie api interactor for character data",
   "main": "webserver.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "extract-zip": "^2.0.1",
